syntax = "proto3";

package weather;

service WeatherService {
  rpc GetWeather (CityRequest) returns (GetWeatherResponse);
  rpc ValidateCity (CityRequest) returns (ValidateCityResponse);
}

message GetWeatherResponse {
  double temperature = 1;
  double humidity = 2;
  string description = 3;
}

message CityRequest {
  string city = 1;
}

message ValidateCityResponse {
  string city = 1;
}